# bionty-base

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  df_human__phecode__1.2__Phenotype.parquet  lamin-project.yaml  nf_core_pipelines_info.json  noxfile.py  pyproject.toml  ree.py  requirements-cache.txt  test.py
.github/workflows/: build.yml  check_ontologies_reachable.yml  latest-changes.yml  python-test.yml  update_ontologies.yml  update_version_urls.yaml  update_version_urls.yml
biomap/: __init__.py
biomap/bioentity/: __init__.py  _gene.py  _species.py  biomart.ipynb
biomap/biotype/: __init__.py  _gene.py
biomap/gene/: __init__.py  _gene.py
biomap/species/: __init__.py  _species.py
bionty/: __init__.py  _bionty.py  _display_sources.py  _display_versions.py  _entity.py  _fix_index.py  _httpx.py  _io.py  _lookup.py  _md5.py  _models.py  _normalize.py  _ontology.py  _public_ontology.py  _rest.py  _servers.py  _settings.py  _sync_sources.py  _sync_versions.py  _table.py  _urls.py  sync_versions.py  versions.yml
bionty/_cellline/: __init__.py  _core.py
bionty/_cellmarker/: __init__.py  _core.py
bionty/_celltype/: __init__.py  _core.py
bionty/_compat/: bionty_0_16_0.py  bionty_0_17_0.py  bionty_0_8_1.py  update_yaml_format.py
bionty/_disease/: __init__.py  _core.py
bionty/_entities/: _cellmarker.py  _phenotype.py  _protein.py  _shared_docstrings.py  _tissue.py
bionty/_gene/: __init__.py  _core.py
bionty/_phenotype/: __init__.py  _core.py
bionty/_protein/: __init__.py  _core.py
bionty/_readout/: __init__.py  _core.py
bionty/_species/: __init__.py  _core.py
bionty/_tissue/: _core.py
bionty/celltype/: __init__.py  _core.py  main.py
bionty/dev/: __init__.py  _current_db_version.py  _fix_index.py  _handle_sources.py  _handle_versions.py  _io.py  _latest_db_version.py  _ontology.py  _upath.py
bionty/disease/: __init__.py  _core.py  main.py
bionty/entities/: _bfxpipeline.py  _bfxpipelines.py  _biosample.py  _cellline.py  _cellmarker.py  _celltype.py  _developmentalstage.py  _disease.py  _drug.py  _ethnicity.py  _experimentalfactor.py  _gene.py  _organism.py  _pathway.py  _phenotype.py  _protein.py  _readout.py  _shared_docstrings.py  _species.py  _tissue.py
bionty/gene/: __init__.py  _core.py  _query.py  main.py  object.py  static.py
bionty/protein/: __init__.py  _core.py  _query.py
bionty/sources/: .lamindb_currently_used_sources.yaml  sources.yaml
bionty/species/: __init__.py  _core.py  _object.py  _query.py  _static.py  (+3 more)
bionty_base/: __init__.py  _display_sources.py  _ontology.py  _public_ontology.py  _settings.py  _sync_sources.py  sources.yaml
docs/: api.md  api.rst  changelog.md  conf.py  configuration.md  guide.md  guides.md  index.md  index.rst  reference.md
scripts/: check_ontologies_reachable.py  determine_md5s.py  fetch_bfxpipelines.py  generate_bfxpipelines.py  latest_ontologies_versions.py  update_new_ontologies.py  upload_new_ontologies.py
tests/: test_base.py  test_bionty.py  test_curate.py  test_current_db_version.py  test_entity.py  test_fix_index.py  test_fuzzy_match.py  test_inspect.py  test_lamindb.py  test_lookup.py  test_map_synonyms.py  test_md5.py  test_notebooks.py  test_ontology.py  test_sync_versions.py  test_table.py
(+121 files in other folders)
