[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bionty"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anndata",
    "typeguard",
    "pronto",
    "orjson",
    "pyarrow",
    "nbproject",
    "lndb",
    "rich",
    "cached_property",
]

[project.urls]
Home = "https://github.com/laminlabs/bionty"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "nbmake",
    "scanpy",
]

[project.scripts]
bionty = "bionty.__main__:main"

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "bionty/*",
]
